# src/main/java/com/dng/cs/core/controller/AddressController.java
@@ -5,7 +5,6 @@ import com.dng.cs.core.model.Address;
 import com.dng.cs.core.model.ModelApiResponse;
 import com.dng.cs.core.service.AddressService;
 import com.dng.cs.core.util.response.AddressApiResponse;
-import com.dng.cs.core.util.response.ClientApiResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -42,7 +41,7 @@ public class AddressController implements AddressApi {
     }
 
     @Override
-    @GetMapping("/{clientId}")
+    @GetMapping("/client/{clientId}")
     public ResponseEntity<ModelApiResponse> getAddressByClientId(@PathVariable String clientId) {
         List<Address> addressList = addressService.getAddressByClientId(clientId);
         return ResponseEntity.ok(AddressApiResponse.getAddressByClientId(clientId, addressList));
