# src/main/java/com/dng/cs/core/entity/ContractEntity.java
@@ -1,14 +1,19 @@
 package com.dng.cs.core.entity;
 
+import lombok.Getter;
+import lombok.Setter;
 import lombok.ToString;
 
 import javax.persistence.*;
 import java.sql.Date;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
 import java.util.Objects;
 
 @Entity
 @Table(name = "CONTRACT")
 @ToString
+@Getter @Setter
 public class ContractEntity {
     @Basic
     @Column(name = "STATE")
@@ -22,7 +27,7 @@ public class ContractEntity {
     private String productCat;
     @Basic
     @Column(name = "CON_CAT")
-    private String conCat;
+    private String contractCat;
     @Basic
     @Column(name = "CONTRACT_NUMBER")
     private String contractNumber;
@@ -32,28 +37,27 @@ public class ContractEntity {
     @Basic
     @Column(name = "MAIN_PRODUCT")
     private String mainProduct;
-
     @ManyToOne(fetch = FetchType.EAGER)
     @JoinColumn(name = "CLIENT__ID")
-    private ContractEntity clientId;
+    private ClientEntity clientId;
     @Basic
     @Column(name = "CURR")
-    private String curr;
+    private String currency;
     @Basic
     @Column(name = "AMOUNT_AVAILABLE")
-    private Integer amountAvailable;
+    private Long amountAvailable;
     @Basic
     @Column(name = "DATE_OPEN")
-    private Date dateOpen;
+    private OffsetDateTime dateOpen;
     @Basic
     @Column(name = "DATE_EXPIRE")
-    private Date dateExpire;
+    private OffsetDateTime dateExpire;
     @Basic
     @Column(name = "CARD_EXPIRE")
     private String cardExpire;
     @Basic
     @Column(name = "CONTR_STATUS")
-    private String contrStatus;
+    private String contractStatus;
     @Basic
     @Column(name = "ADD_INFO")
     private String addInfo;
@@ -61,144 +65,4 @@ public class ContractEntity {
     @Column(name = "IS_READY")
     private String isReady;
 
-    public String getState() {
-        return state;
-    }
-
-    public void setState(String state) {
-        this.state = state;
-    }
-
-    public long getId() {
-        return id;
-    }
-
-    public void setId(long id) {
-        this.id = id;
-    }
-
-    public String getProductCat() {
-        return productCat;
-    }
-
-    public void setProductCat(String productCat) {
-        this.productCat = productCat;
-    }
-
-    public String getConCat() {
-        return conCat;
-    }
-
-    public void setConCat(String conCat) {
-        this.conCat = conCat;
-    }
-
-    public String getContractNumber() {
-        return contractNumber;
-    }
-
-    public void setContractNumber(String contractNumber) {
-        this.contractNumber = contractNumber;
-    }
-
-    public String getCommentText() {
-        return commentText;
-    }
-
-    public void setCommentText(String commentText) {
-        this.commentText = commentText;
-    }
-
-    public String getMainProduct() {
-        return mainProduct;
-    }
-
-    public void setMainProduct(String mainProduct) {
-        this.mainProduct = mainProduct;
-    }
-
-    public ContractEntity getClientId() {
-        return clientId;
-    }
-
-    public void setClientId(ContractEntity clientId) {
-        this.clientId = clientId;
-    }
-
-    public String getCurr() {
-        return curr;
-    }
-
-    public void setCurr(String curr) {
-        this.curr = curr;
-    }
-
-    public Integer getAmountAvailable() {
-        return amountAvailable;
-    }
-
-    public void setAmountAvailable(Integer amountAvailable) {
-        this.amountAvailable = amountAvailable;
-    }
-
-    public Date getDateOpen() {
-        return dateOpen;
-    }
-
-    public void setDateOpen(Date dateOpen) {
-        this.dateOpen = dateOpen;
-    }
-
-    public Date getDateExpire() {
-        return dateExpire;
-    }
-
-    public void setDateExpire(Date dateExpire) {
-        this.dateExpire = dateExpire;
-    }
-
-    public String getCardExpire() {
-        return cardExpire;
-    }
-
-    public void setCardExpire(String cardExpire) {
-        this.cardExpire = cardExpire;
-    }
-
-    public String getContrStatus() {
-        return contrStatus;
-    }
-
-    public void setContrStatus(String contrStatus) {
-        this.contrStatus = contrStatus;
-    }
-
-    public String getAddInfo() {
-        return addInfo;
-    }
-
-    public void setAddInfo(String addInfo) {
-        this.addInfo = addInfo;
-    }
-
-    public String getIsReady() {
-        return isReady;
-    }
-
-    public void setIsReady(String isReady) {
-        this.isReady = isReady;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        ContractEntity that = (ContractEntity) o;
-        return id == that.id && Objects.equals(state, that.state) && Objects.equals(productCat, that.productCat) && Objects.equals(conCat, that.conCat) && Objects.equals(contractNumber, that.contractNumber) && Objects.equals(commentText, that.commentText) && Objects.equals(mainProduct, that.mainProduct) && Objects.equals(clientId, that.clientId) && Objects.equals(curr, that.curr) && Objects.equals(amountAvailable, that.amountAvailable) && Objects.equals(dateOpen, that.dateOpen) && Objects.equals(dateExpire, that.dateExpire) && Objects.equals(cardExpire, that.cardExpire) && Objects.equals(contrStatus, that.contrStatus) && Objects.equals(addInfo, that.addInfo) && Objects.equals(isReady, that.isReady);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(state, id, productCat, conCat, contractNumber, commentText, mainProduct, clientId, curr, amountAvailable, dateOpen, dateExpire, cardExpire, contrStatus, addInfo, isReady);
-    }
 }
